[gd_scene load_steps=4 format=2]

[ext_resource path="res://DummyTest/GDQFirebaseTon.gd" type="Script" id=1]
[ext_resource path="res://fonts/Built/Ubuntu_M_48tred.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/Built/Ubuntu_M_72tred.tres" type="DynamicFont" id=3]


[node name="GDQFirebaseTon" type="Node"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Emaile" type="LineEdit" parent="."]
margin_right = 574.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 2 )
placeholder_text = "Emaile"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pasworde" type="LineEdit" parent="."]
margin_left = 574.0
margin_right = 1148.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 2 )
secret = true
placeholder_text = "Passworde"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DATAPUSH" type="LineEdit" parent="."]
margin_left = 1148.0
margin_right = 1900.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 2 )
placeholder_text = "DATAFILL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Regist" type="Button" parent="."]
margin_top = 105.0
margin_right = 574.0
margin_bottom = 278.0
custom_fonts/font = ExtResource( 3 )
text = "REGISTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login" type="Button" parent="."]
margin_left = 574.0
margin_top = 105.0
margin_right = 1148.0
margin_bottom = 278.0
custom_fonts/font = ExtResource( 3 )
text = "LOGIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PUSH" type="Button" parent="."]
margin_left = 1148.0
margin_top = 105.0
margin_right = 1900.0
margin_bottom = 278.0
custom_fonts/font = ExtResource( 3 )
text = "PUSH DATA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutherQuest" type="VBoxContainer" parent="."]
visible = false
margin_right = 1174.0
margin_bottom = 294.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 294.0
margin_right = 1900.0
margin_bottom = 531.0
custom_fonts/font = ExtResource( 2 )
text = "EEWEWEWQQWWQEW"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="refreshClip" type="Button" parent="."]
margin_top = 531.0
margin_right = 626.0
margin_bottom = 711.0
text = "refresh clip"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="text_changed" from="Emaile" to="." method="_on_Emaile_text_changed"]
[connection signal="text_changed" from="Pasworde" to="." method="_on_Pasworde_text_changed"]
[connection signal="text_changed" from="DATAPUSH" to="." method="_on_DATAPUSH_text_changed"]
[connection signal="pressed" from="Regist" to="." method="_on_Regist_pressed"]
[connection signal="pressed" from="Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="PUSH" to="." method="_on_PUSH_pressed"]
[connection signal="pressed" from="refreshClip" to="." method="_on_refreshClip_pressed"]
